Tmux - Fix link-hint integration
Shell commands can no longer go in curly braces in the latest tmux versions.

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -5375,6 +5375,7 @@ This package is unfortunately unmaintained.
   :config
   (defun noct-terminal-link-hint-file (file)
     (find-file file)
+    (goto-address-mode)
     (unwind-protect (link-hint-open-link)
       (kill-buffer)
       (start-process-shell-command "xdotool getactivewindow windowunmap")
